# Unitree_SDK_Extended

./: .gitmodules  README.md  Readme_zh.md
FAQs/: Slam.md  g1.md  go2.md
docs/Unitree_SDK2/g1/: arm.md
docs/en/Unitree_SDK2/g1/: arm.md
docs/zh/Extend/g1/high_level/: B2 PCs.md  g1_high_level.md
docs/zh/Unitree_SDK2/g1/: arm.md
extended_example/Unitree_SDK2/g1/dex3/: USB_Dex3_example.cpp
extended_example/Unitree_SDK2/g1/high_level/: Readme.md  Readme_ch.md  g1_global_armcontroller.cpp  g1_global_armcontroller_IK.cpp  g1_global_armcontroller_Key.cpp  g1_global_armcontroller_Key_backup.cpp  g1_global_highlevel.cpp  g1_loco_with_arm_example.cpp  g1_test.cpp
extended_example/Unitree_SDK2/g1/low_level/: g1_debug_mode.py  g1_low_universal_example.cpp
original_SDK/D1_SDK/: CMakeLists.txt
original_SDK/D1_SDK/src/: arm_zero_control.cpp  get_arm_joint_angle.cpp  joint_angle_control.cpp  joint_enable_control.cpp  multiple_joint_angle_control.cpp  test.cpp
original_SDK/unitree_slam/: Readme.md
original_SDK/unitree_slam/20250410/lib/unitree_slam/: README.md
original_SDK/unitree_slam/20250410/lib/unitree_slam/ros2_msg/unitree_interfaces/: QtCommand.msg  QtNode.msg
original_SDK/unitree_slam/20250410/lib/unitree_slam/rviz2/: costmap.rviz
original_SDK/unitree_slam/20250410/lib/unitree_slam/unitree_slam_example/: delete_node.cpp  demo_b2.cpp  pose_init.cpp  query_edge.cpp  set_target_nav.cpp
original_SDK/unitree_slam/20250410/module/Odometer_service/devel/: local_setup.sh
original_SDK/unitree_slam/20250410/module/graph_pid_ws/: 0_unitree_slam.sh
original_SDK/unitree_slam/20250410/module/graph_pid_ws/config_files/lio_sam_config/: params_mid360.yaml
original_SDK/unitree_slam/20250410/module/graph_pid_ws/install/: local_setup.sh
original_SDK/unitree_slam/20250410/module/graph_pid_ws/install/share/graph_process/: local_setup.sh  package.xml  package.zsh
original_SDK/unitree_slam/20250410/module/graph_pid_ws/install/share/graph_process/launch/: graph_star_multidog_client.launch.py  graph_star_multifloor_web.launch.py  muiltidog_client_id0.launch.py  muiltidog_client_id1.launch.py  muiltidog_server.launch.py
original_SDK/unitree_slam/20250410/services/: install.sh
original_SDK/unitree_slam/20250609/: DetailUpdating.md
original_SDK/unitree_slam/20250609/lib/unitree_slam/: CMakeLists.txt  install.sh
original_SDK/unitree_slam/20250609/lib/unitree_slam/rviz2/: build_map.rviz
original_SDK/unitree_slam/20250609/lib/unitree_slam/unitree_slam_example/: demo_mid360.cpp  multiple_nav_set.cpp  recover_nav.cpp  rslidar_dds_test.cpp  start_mapping.cpp
original_SDK/unitree_slam/20250609/module/Odometer_service/devel/lib/: libgflags.so.2.2
original_SDK/unitree_slam/20250609/module/Odometer_service/logs/minkindr_python/: build.cmake.000.log.stderr
original_SDK/unitree_slam/20250609/module/Odometer_service/logs/opengv/: build.cmake.000.log.stderr
original_SDK/unitree_slam/20250609/module/Odometer_service/src/dbow2_catkin/: CMakeLists.txt
original_SDK/unitree_slam/20250609/module/graph_pid_ws/config_files/: log_com.sh
original_SDK/unitree_slam/20250609/module/graph_pid_ws/config_files/local_planner_config/: params.yaml  robot_state.csv
original_SDK/unitree_slam/20250609/module/graph_pid_ws/install/share/local_planner/: package.xml
original_SDK/unitree_slam/20250609/unitree/lib/unitree_slam/unitree_slam_example/: add_edge.cpp  close_all_node.cpp  delete_edge.cpp  end_mapping.cpp  multiple_nav_default.cpp  query_node.cpp  return_origin.cpp  start_nav.cpp
original_SDK/unitree_slam/20250609/unitree/module/graph_pid_ws/install/share/nav2_costmap/: package.bash  package.sh  package.xml
original_SDK/unitree_slam/20250609/unitree/module/graph_pid_ws/install/share/nav2_costmap/cmake/: ament_cmake_export_libraries-extras.cmake  nav2_costmap__rosidl_typesupport_cExport.cmake
original_SDK/unitree_slam/20250806-W/module/unitree_slam/config/gridmap_config/: config.yaml
original_SDK/unitree_slam/20250806-W/module/unitree_slam/config/mid360/: user_config.yaml
original_SDK/unitree_slam/20250806-W/module/unitree_slam/config/pl_relocation/: mid360.yaml  xt16.yaml
original_SDK/unitree_slam/20250806-W/module/unitree_slam/config/slam_interfaces_server_config/: param.yaml
original_SDK/unitree_slam/20250806/module/unitree_slam/config/pl_mapping/: mid360.yaml  xt16.yaml
original_SDK/unitree_slam/20250806/module/unitree_slam/example/: CMakeLists.txt
original_SDK/unitree_slam/lib/unitree_slam/ros2_msg/graph_msg/: Node.msg
original_SDK/unitree_slam/lib/unitree_slam/unitree_slam_example/: add_node.cpp  demo_xt16.cpp  pause_nav.cpp  single_nav.cpp  start_relocation.cpp
original_SDK/unitree_slam/module/Odometer_service/.catkin_tools/profiles/default/: build.yaml
original_SDK/unitree_slam/module/Odometer_service/devel/: .catkin
original_SDK/unitree_slam/module/Odometer_service/devel/.private/catkin_simple/: .rosinstall
original_SDK/unitree_slam/module/Odometer_service/devel/.private/dbow2_catkin/: .rosinstall
original_SDK/unitree_slam/module/Odometer_service/devel/.private/eigen_catkin/: local_setup.sh  setup.sh
original_SDK/unitree_slam/module/Odometer_service/devel/.private/eigen_checks/: .catkin
original_SDK/unitree_slam/module/Odometer_service/devel/.private/glog_catkin/: .catkin
original_SDK/unitree_slam/module/Odometer_service/devel/.private/minkindr_conversions/: .catkin
original_SDK/unitree_slam/module/Odometer_service/devel/.private/opengv/: local_setup.sh
original_SDK/unitree_slam/module/Odometer_service/devel/.private/rpg_common/: .catkin  .rosinstall  setup.sh
original_SDK/unitree_slam/module/Odometer_service/logs/minkindr_python/: build.cmake.001.log.stderr
original_SDK/unitree_slam/module/graph_pid_ws/config_files/local_planner_config/: params.yaml
original_SDK/unitree_slam/module/graph_pid_ws/config_files/nav2_costmap_config/: inflation.yaml
original_SDK/unitree_slam/module/graph_pid_ws/config_files/nav2_planner_astar_config/: config.yaml
original_SDK/unitree_slam/module/graph_pid_ws/install/: setup.sh
(+1445 files in other folders)
