<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>graph_process</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="unitree@todo.todo">unitree</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>graph_msg</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>unitree_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
