<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>local_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="xiaomu1201@qq.com">unitree</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>  
  <depend>tf2</depend>  
  <depend>tf2_ros</depend>  
  <depend>tf2_msgs</depend>  
  <depend>tf2_geometry_msgs</depend>  
  <depend>visualization_msgs</depend>  
  <depend>geometry_msgs</depend>  
  <depend>graph_msg</depend>  
  <depend>unitree_go</depend>  
  <depend>unitree_interfaces</depend>  
  <!-- <depend>unitree_api</depend>   -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
